# voice-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260615_0001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: appointments.py  calendar_connections.py  calls.py  ical_settings.py  provider_settings.py  user_settings.py  webhooks.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py  types.py
backend/app/models/: __init__.py  appointment.py  calendar.py  call.py  contact.py  enums.py  memory.py  notification.py  privacy.py  provider_config.py  tenant.py  user.py
backend/app/schemas/: __init__.py  appointments.py  base.py  calendar.py  calls.py  provider_settings.py  user_settings.py  webhooks.py
backend/app/services/: calendar_connections.py  calls.py  dev_context.py  user_settings.py
backend/voice_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .dockerignore  Dockerfile  angular.json  package.json
frontend/src/: index.html  main.ts  styles.css
frontend/src/app/: app.component.ts
