[project]
name = "voice-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the personal AI voice agent MVP"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0"
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
